Responsive stuff, uneven slides bug

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -22,23 +22,39 @@ h1 {
 
 	.slide-container{
 		position: relative;
-		padding: 0 4rem;
+		padding: 0 2rem;
+
+		@include breakpoint(large) {
+			padding: 0 4rem;
+		}
 	}
 
 	button{
 		position: absolute;
 		left: 0;
 		background-image: url(../img/arrow-left.svg);
-		height: 10.2rem;
-		width: 2.67rem;
+		height: rem-calc(80);
+		width: rem-calc(24);
 		opacity: .1;
 		background-size: contain;
 		background-repeat: no-repeat;
+		top: 25%;
+		transform: translate(0, -50%);
 
 		&.next{
 			background-image: url(../img/arrow-right.svg);
 			left: auto;
 			right: 0;
+		}
+
+		@include breakpoint(medium) {
+			top: 50%;
+		}
+
+		@include breakpoint(large) {
+			height: 10.2rem;
+			width: 2.67rem;
+			top: 50%;
 		}
 	}
 
@@ -59,7 +75,7 @@ h1 {
 		@extend .row;
 
 		.slide {
-			@extend .large-6;
+			@extend .medium-6;
 			@extend .columns;
 
 			.avatar {
@@ -69,6 +85,7 @@ h1 {
 				overflow: visible;
 				padding: 5px;
 				text-align: center;
+				margin-bottom: 1rem;
 
 				&:before{
 						left: 0;
@@ -90,12 +107,17 @@ h1 {
 				@extend .large-8;
 				@extend .columns;
 				border: 0;
-				font-size: .888rem;
+				text-align: center;
+				font-size: 1rem;
+
+				@include breakpoint(large) {
+					text-align: left;
+				}
 
 				footer {
 					font-family: 'Muli', 'Lato', Helvetica, Arial, sans-serif;
-					font-size: .95rem;
-					
+					font-size: 1.0625rem;
+
 					p {
 						margin: 0;
 						line-height: 1.25;
@@ -114,5 +136,9 @@ h1 {
 				}
 			} // end blockquote
 		} // end .slide
+
+		.slide:last-child {
+			@extend .end;
+		}
 	}
 }
